# Remit

./: .gitignore  LICENCE  README.md  package-lock.json  package.json
Docs/Diagrams/: uml_casos_de_uso.drawio
src/: index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  test.db
src-tauri/src/: backend_db.rs  find_devices.rs  ftp_client.rs  ftp_server.rs  get_in_backend.rs  lib.rs  remit_transfer_module.rs  utils.rs
src/SendFile/Components/Atoms/: InputType.tsx
src/SendFile/Components/Molecules/: DevicesCard.tsx  LoadFiles.tsx  LoadingBar.tsx
src/SendFile/Components/Organisms/: DevicesContainer.tsx  FilesContainer.tsx  Modal.tsx
src/SendFile/Pages/: FilePage.tsx
src/context/: DeviceContext.tsx
